force-app/main/default/objects/Player_Application__c/Player_Application__c.object-meta.xml
<CustomObject>
    <label>Player Card</label>
    <nameField>
        <displayFormat>Card= {0000}</displayFormat>
        <label>Player Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>