force-app/main/default/objects/Player_Application__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent?</label>
    <type>Checkbox</type>
</CustomField>