force-app/main/default/objects/Player_Application__c/fields/Agent_Card__c.field-meta.xml
<CustomField>
    <fullName>Agent_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Card</label>
    <referenceTo>Agent_Card__c</referenceTo>
    <relationshipLabel>Player Cards</relationshipLabel>
    <relationshipName>Player_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>