force-app/main/default/objects/Player_Application__c/fields/Consent_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Consent_Form_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Form Signed</label>
    <type>Checkbox</type>
</CustomField>