force-app/main/default/objects/Player_Application__c/fields/Further_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Further_Evaluation__c</fullName>
    <label>Further Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Interest</fullName>
            </value>
            <value>
                <fullName>Interest--but not at this time</fullName>
            </value>
            <value>
                <fullName>Interest--further evaluation needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>