force-app/main/default/objects/Player_Application__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>In Centimeters</description>
    <label>Height</label>
    <length>3</length>
    <type>Text</type>
</CustomField>