force-app/main/default/objects/Player_Application__c/fields/Parent_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Parent_E_mail__c</fullName>
    <label>Parent E-mail</label>
    <type>Email</type>
</CustomField>