force-app/main/default/objects/Player_Application__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <label>Parent Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>