force-app/main/default/objects/Player_Application__c/fields/Strong_Foot__c.field-meta.xml
<CustomField>
    <fullName>Strong_Foot__c</fullName>
    <label>Strong Foot</label>
    <length>12</length>
    <type>Text</type>
</CustomField>