force-app/main/default/objects/Player_Application__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <length>15</length>
    <type>Text</type>
</CustomField>