force-app/main/default/objects/Player_Application__c/recordTypes/Adult_Scouts.recordType-meta.xml
<RecordType>
    <fullName>Adult_Scouts</fullName>
    <active>true</active>
    <description>Record type for the Adult scouts</description>
    <label>Adult Scouts</label>
</RecordType>