force-app/main/default/objects/Player_Application__c/listViews/Players.listView-meta.xml
<ListView>
    <fullName>Players</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Players</label>
</ListView>